--- a/index.html
+++ b/index.html
@@ -90,16 +90,16 @@
     </div>
 
     <div class="container3">
-        <img src="/img/IMG_20190905_195807.jpg" alt="">
+        <img src="IMG_20190905_195807.jpg" alt="">
         <h2 id="idname">Aditya Raj</h2>
 
     </div>
 
     <div class="cont-icon">
-        <a href="https://github.com/Ad1tyaRaj"><i><img src="/img/github.png" alt=""></i></a>
-        <a href="https://twitter.com/ad1tya_raj_"><i><img src="/img/twitter.png" alt=""></i></a>
-        <a href="https://www.linkedin.com/in/aditya-raj-07950a234/"><i><img src="/img/linkedin.png" alt=""></i></a>
-        <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><i><img src="/img/email.png" alt=""></i></a>
+        <a href="https://github.com/Ad1tyaRaj"><i><img src="github.png" alt=""></i></a>
+        <a href="https://twitter.com/ad1tya_raj_"><i><img src="twitter.png" alt=""></i></a>
+        <a href="https://www.linkedin.com/in/aditya-raj-07950a234/"><i><img src="linkedin.png" alt=""></i></a>
+        <a href="https://mail.google.com/mail/u/0/?tab=rm&ogbl#inbox"><i><img src="email.png" alt=""></i></a>
     </div>
 
     <div class="project">
