--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 
 
             <article class="work__card">
-               <a href="#" target="_blank" class="work__link">
+               <a href="https://github.com/Ad1tyaRaj/Python-Ntes/tree/main/ML2024" target="_blank" class="work__link">
                   <h2 class="work__title">Machine Learning (work)</h2>
                   <p class="work__description">
                      Feature engineering is the process of transforming raw data into features that can be used by
@@ -386,6 +386,12 @@
 
                <div class="skills__box">
                   <a target="_blank" href="https://github.com/Ad1tyaRaj"><img src="assets/img/info-github1.svg"
+                        alt="image" class="skills__img"></a>
+               </div>
+
+
+               <div class="skills__box">
+                  <a target="_blank" href="https://x.com/ad1tya_raj_"><img src="assets/img/info-twitter.svg"
                         alt="image" class="skills__img"></a>
                </div>
 
