--- a/index.html
+++ b/index.html
@@ -289,6 +289,11 @@
                      <span class="skills__name">Bootstrap</span>
                   </div>
 
+                  <div class="skills__box">
+                     <img src="assets/img/info-pandas.svg" alt="image" class="skills__img">
+                     <span class="skills__name">Pandas</span>
+                  </div>
+
 
                </div>
             </div>
