--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
 
 
                <div class="skills__box">
-                  <a target="_blank" href="https://x.com/ad1tya_raj_"><img src="assets/img/info-twitter.svg"
+                  <a target="_blank" href="https://x.com/Ad1tyaRaj_"><img src="assets/img/info-twitter.svg"
                         alt="image" class="skills__img"></a>
                </div>
 
