--- a/index.html
+++ b/index.html
@@ -294,6 +294,11 @@
                      <span class="skills__name">Pandas</span>
                   </div>
 
+                  <div class="skills__box">
+                     <img src="assets/img/info-wordpress.svg" alt="image" class="skills__img">
+                     <span class="skills__name">WordPress</span>
+                  </div>
+
 
                </div>
             </div>
