--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
    <!--==================== HEADER ====================-->
    <header class="header" id="header">
       <nav class="nav container">
-         <a href="#" class="nav__logo">ADITYA RAJ</a>
+         <a href="#" class="nav__logo">CODE5</a>
 
          <div class="nav__menu" id="nav-menu">
             <ul class="nav__list">
