--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
          <h2 class="section__title">CONTACT ME</h2>
 
          <div class="contact__container grid">
-            <form action="code.adityaraj@gmail.com" class="contact__form grid" id="contact-form">
+            <form action="mailto:code.adityaraj.com" class="contact__form grid" id="contact-form">
                <div class="contact__group grid">
 
                   <input type="" name="" placeholder="Names" required class="contact__input">
