--- a/index.html
+++ b/index.html
@@ -92,13 +92,12 @@
 
 
             <article class="work__card">
-               <a href="https://github.com/Ad1tyaRaj/Python-Ntes/tree/main/ML2024" target="_blank" class="work__link">
-                  <h2 class="work__title">Machine Learning (work)</h2>
+               <a href="https://github.com/Ad1tyaRaj/Student-placement-model" target="_blank" class="work__link">
+                  <h2 class="work__title">Student-placement-model</h2>
                   <p class="work__description">
-                     Feature engineering is the process of transforming raw data into features that can be used by
-                     machine learning algorithms to improve model performance. It's a critical step in the machine
-                     learning pipeline, as the quality of features directly impacts the model's ability to learn and
-                     make accurate predictions.
+                     The Predicting Student Placement: CGPA and Resume Score project is designed to create a machine
+                     learning model that can effectively predict whether a student will be placed or not, based on their
+                     CGPA and resume score.
                   </p>
 
                   <img src="assets/img/work-4.png" alt="image" class="work__img">
@@ -363,7 +362,7 @@
          <h2 class="section__title">CONTACT ME</h2>
 
          <div class="contact__container grid">
-            <form action="mailto:code.adityaraj.com" class="contact__form grid" id="contact-form">
+            <form action="mailto:code.adityaraj@gmail.com" class="contact__form grid" id="contact-form">
                <div class="contact__group grid">
 
                   <input type="" name="" placeholder="Names" required class="contact__input">
@@ -401,8 +400,8 @@
 
 
                <div class="skills__box">
-                  <a target="_blank" href="https://x.com/Ad1tyaRaj_"><img src="assets/img/info-twitter.svg"
-                        alt="image" class="skills__img"></a>
+                  <a target="_blank" href="https://x.com/Ad1tyaRaj_"><img src="assets/img/info-twitter.svg" alt="image"
+                        class="skills__img"></a>
                </div>
 
             </div>
