--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <!--==================== HOME ====================-->
       <section class="home section" id="home">
          <div class="home__container container grid">
-            <img src="assets/img/Avatar4.png" alt="image" class="home__img">
+            <img src="assets/img/A10.png" alt="image" class="home__img">
 
             <div class="home__data">
                <h1 class="home__name">Aditya <br> Raj</h1>
@@ -186,7 +186,7 @@
                      class="button about__button">Download Resume</a>
                </div>
 
-               <img src="assets/img/Avatar-2.png" alt="image" class="about__img">
+               <img src="assets/img/A3.png" alt="image" class="about__img">
             </div>
 
             <!-- EXPERIENCE -->
