--- a/index.html
+++ b/index.html
@@ -139,16 +139,17 @@
             </article>
 
             <article class="work__card">
-               <a href="#" target="_blank" class="work__link">
+               <a href="https://github.com/Ad1tyaRaj/Heart-Attack-Model-webapps" target="_blank" class="work__link">
                   <h2 class="work__title">Portfolio Website</h2>
                   <p class="work__description">
-                     May be the one which you looking.
-                     Designed and developed a personal portfolio website to showcase my frontend development skills. The
-                     website features a modern, responsive design with smooth navigation and interactive elements. It
-                     includes sections for my projects, skills, experience, and contact information.
+                     This machine learning project predicts heart attack risk using a dataset of 170,501 records and 25
+                     features, achieving 75% accuracy. Ongoing improvements focus on feature engineering, scaling, and
+                     model optimization to enhance accuracy and robustness. The goal is to refine feature selection,
+                     improve performance, and provide a user-friendly interface with detailed documentation.
                   </p>
 
-                  <img src="assets/img/work-1.png" alt="image" class="work__img">
+                  <img src="assets/img/work-5.png" alt="image" class="work__img">
+
 
                   <i class="ri-arrow-right-line"></i>
                </a>
