--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 
             <article class="work__card">
                <a href="https://github.com/Ad1tyaRaj/Heart-Attack-Model-webapps" target="_blank" class="work__link">
-                  <h2 class="work__title">Portfolio Website</h2>
+                  <h2 class="work__title">Heart-Attack-Model-Webapps</h2>
                   <p class="work__description">
                      This machine learning project predicts heart attack risk using a dataset of 170,501 records and 25
                      features, achieving 75% accuracy. Ongoing improvements focus on feature engineering, scaling, and
