--- a/index.html
+++ b/index.html
@@ -108,16 +108,17 @@
 
             <article class="work__card">
                <a href="https://github.com/Ad1tyaRaj/Blog-Web-apps" target="_blank" class="work__link">
-                  <h2 class="work__title">Blog-Web-apps
+                  <h2 class="work__title">FINGENIUS.AI
                   </h2>
                   <p class="work__description">
-                     This repository contains a Django-based blog web application that allows users to create, edit, and
-                     manage blog posts, as well as interact with content through comments. The app features user
-                     authentication, category filtering, and a clean, responsive design using Bootstrap.
+                     FINGENIUS.AI is an intelligent, AI-powered stock market query system that combines natural
+                     language processing and real-time financial data analysis. The project involved building a
+                     multi-agent architecture with dedicated Query and Finance Analysis agents, reaching 92%
+                     accuracy in handling stock-related questions.
 
                   </p>
 
-                  <img src="assets/img/work-2.png" alt="image" class="work__img">
+                  <img src="assets/img/work-6.png" alt="image" class="work__img">
 
                   <i class="ri-arrow-right-line"></i>
                </a>
@@ -183,7 +184,7 @@
                      where I can contribute to impactful projects while furthering my career development.
                   </p>
 
-                  <a href="assets/pdf/Resume-Aditya Raj.pdf" download="" target="_blank"
+                  <a href="assets/pdf/Copy of Aditya_MResume.pdf" download="" target="_blank"
                      class="button about__button">Download Resume</a>
                </div>
 
